--- a/tests/devapps/UWP standalone/MainPage.xaml
+++ b/tests/devapps/UWP standalone/MainPage.xaml
@@ -17,7 +17,7 @@
         <Button Content="WIA" Margin="711,105,0,0" VerticalAlignment="Top" Click="AcquireTokenIWA_ClickAsync"/>
         <TextBlock HorizontalAlignment="Left" Margin="354,337,0,0" Height="556" Width="800" TextWrapping="Wrap" Text="" VerticalAlignment="Top" TextAlignment="Center" Name="AccessToken"/>
         <CheckBox Content="Use Broker (WAM)" Margin="615,250,0,0" VerticalAlignment="Top" IsChecked="True" x:Name="chkUseBroker"/>
-        <Button Content="GetAccounts" Margin="619,287,0,0" VerticalAlignment="Top" Click="ClearCacheAsync"/>
+        <Button Content="GetAccounts" Margin="619,287,0,0" VerticalAlignment="Top" Click="GetAccountsAsync"/>
 
         <TextBox x:Name="tbxUpn" Header="Account UPN prefix (leave empty for Account Picker)"  HorizontalAlignment="Left" Margin="615,157,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="205"/>
     </Grid>
